integrate feedback with argilla

--- a/scripts/function_calling_dataset/templates/functionfeedback.jinja2
+++ b/scripts/function_calling_dataset/templates/functionfeedback.jinja2
@@ -8,34 +8,25 @@
 ## Format
 
 ### Input
-Function: [Specify the function that may be used]
-Instruction: [Specify task goal and restrictions]
-
-Function Calls:
-{% for index in range(responses|length) %}
-<text {{ index + 1}}> [Text {{ index + 1}}]
+Available Function: [Specify the function that may be used by the assistant]
+{% for index in range(responses|length * instructions|length) %}
+Instruction {{index+1}} : [Specify task goal and restrictions]
+Response {{index+1}}: [Specify the response to the task with a function call]
 {%- endfor %}
-
 ### Output
-{%- for index in range(responses|length) %}
-
+{% for index in range(responses|length * instructions|length) %}
 #### Output for Text {{ index + 1}}
 Rating: [Rating for text {{ index + 1}}]
 Rationale: [Rationale for the rating in short sentences]
-
 {%- endfor %}
-
 ---
-
 ## Annotation
 
 ### Input
-Instruction: {{ input }}
-Function: {{ function }}
 
-Responses:
-{% for response in responses %}
-<text {{ loop.index }}> {{ response }}
-{%- endfor %}
-
+Available Function: {{ function }}
+{% for _responses in responses %}{% for index in range(_responses|length) %}
+Instruction {{ index + 1 }}: {{ instructions[index] }}
+Response {{ index + 1 }}: {{ _responses[index] }}
+{% endfor %}{% endfor %}
 ### Output 
